; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_util.c_sqlite3Atoi.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_util.c_sqlite3Atoi.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sqlite3Atoi(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  store i32 0, i32* %3, align 4
  %4 = load i8*, i8** %2, align 8
  %5 = icmp ne i8* %4, null
  br i1 %5, label %6, label %9

6:                                                ; preds = %1
  %7 = load i8*, i8** %2, align 8
  %8 = call i32 @sqlite3GetInt32(i8* %7, i32* %3)
  br label %9

9:                                                ; preds = %6, %1
  %10 = load i32, i32* %3, align 4
  ret i32 %10
}

declare dso_local i32 @sqlite3GetInt32(i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
